--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -68,3 +68,14 @@
 .header-nav__button:hover {
     color: #FF69B4;
 }
+
+.alert-success {
+    background-color: #d4edda;
+    /* 落ち着いた緑 */
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    padding: 8px;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
