Fortify のカスタムバリデーション適用完了！

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -51,3 +51,9 @@ body {
 .login__register-link:hover {
     color: #EC87EF;
 }
+
+.text-danger {
+    font-size: 14px;
+    color: red;
+    margin-top: 5px;
+}
